Improve visual form fill review
